# huasheng-mcp

./: .gitignore  LICENSE  README.md  README_FINAL_MCP.md  RELEASE_MANIFEST.md  pyproject.toml  smoke_test_core.py
docs/: analogy_reasoning_v1_design.md  assistant_prompt_for_mcp_usage.md  conservative_answer_gate_hardening_v0_4_1.md  conservative_answer_prompt_mode_v0_4.md  conservative_route_coverage_hardening_v0_4_3.md  data_analysis_solver_usage.md  data_analysis_v3_release_notes.md  data_analysis_v5_final_summary.md  data_analysis_v5_release_notes.md  data_material_gate_hardening_v0_4_2.md  definition_judgement_v1_design.md  end_to_end_usage.md  graphic_reasoning_scaffold_v0_2_1_visual_grounding_addendum.md  graphic_reasoning_scaffold_v0_2_2_error_driven_addendum.md  graphic_reasoning_scaffold_v0_2_hardening.md  graphic_reasoning_v0_1_scaffold_design.md  judgement_reasoning_scaffolds_v0_1_design.md  logic_reasoning_analysis_v1_design.md  logic_reasoning_solver_usage.md  logic_reasoning_translation_v1_plan.md  logic_reasoning_truth_v1_design.md  logic_reasoning_v2_evaluation_plan.md  logic_reasoning_v3_improvement_plan.md  logic_reasoning_v4_generalization_plan.md  logic_reasoning_v5_refinement_plan.md  mcp_acceptance_checklist.md  mcp_client_config_examples.md  mcp_compose_xingce_analysis_prompt_v0_1_design.md  mcp_guidance_tools_preview_v0_1_design.md  mcp_guidance_tools_quantity_relation_update_v0_1.md  mcp_guidance_tools_verbal_reasoning_update_v0_1.md  mcp_route_xingce_question_v0_1_design.md  mcp_runtime_usage_guide.md  mcp_usage.md  module_context_edge_case_hardening_v0_5_1.md  module_context_override_v0_5_0.md  (+24 more)
(+101 files in other folders)
