[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "huasheng-mcp"
version = "0.6.0"
description = "基于花生十三行测方法论的 MCP 解题辅助工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
huasheng-mcp = "xingce_solver.cli:main"
huasheng-mcp-server = "xingce_solver.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
